# xdptrace

./: CMakeLists.txt  README.md  consumer.c  fasthash.h  hashmap.c  hashmap.h  prog_meta.c  trace_kern.c  trace_meta.h  xdptrace.c  xdptrace.h  xpcapng.c  xpcapng.h
cmake/: bpf.cmake
cmake/bpf/overrides/gnu/: stubs.h
